2004-12-22  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* configure.in:
	Depend on new gtk-engines

	* Industrial/: Remove Industrial engine as it is in gtk-engines now
	* Smooth/.cvsignore: Removed (no longer needed)

2004-11-27  Christian Schaller <uraeus@gnome.org>

	* Fix make-dist, we now depend on Automake 1.9 
	  (think we are first in GNOME CVS for this :)

2004-11-20  Christian Schaller <uraeus@gnome.org>

	* Remove Smooth engine as it is in gnome-themes now

2004-09-27  Jakub Steiner <jimmac@ximian.com>
	
	* Industrial/industrial_style.c:
	* Industrial/gtk-2.0/gtkrc.in: sync with clahey
	
2004-09-02  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Russian to ALL_LINGUAS.

2004-08-31  Christian Schaller <Uraeus@gnome.org>

	* configure.in: Update version to 0.8

2004-08-11  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-07-28  Gustavo Maciel Dias Vieira  <gustavo@sagui.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2004-06-18  Jakub Steiner <jimmac@ximian.com>

	* gnome-fs-directory-visiting: the open folder state

2004-06-17  Christian Schaller <christian@fluendo.com>

	* Added python mimetype icon to Lush from Nicolas Évrard

2004-06-10  Jakub Steiner <jimmac@ximian.com>

	* gnome-fs-executable -> gnome-mime-x-application-executable:
	  symlinking accross directories seems to be a pain. However
	  symlinking to nonexistant files hardly the solution ;)
	
2004-06-10  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/icons/scalable/filesystems/Makefile.am:
	  fix makefile after Christian ;)

2004-06-10  Jakub Steiner <jimmac@ximian.com>

	* my-computer.svg: remove the duplicate

2004-06-09  Christian Schaller <christian@fluendo.com>

	* fix emblem placements
	* fix makefiles after Jakub :)
	* Add gnome-fs-client to Gorilla

2004-06-09  Jakub Steiner <jimmac@ximian.com>

	* stock_dialog_warning.svg: Do not embed font. Fixes bug #140719

2004-06-09  Jakub Steiner <jimmac@ximian.com>
