@@ -11,10 +11,11 @@ BuildRequires:  libxml2-devel >= 0:2.5.0
 BuildRequires:  librsvg2-devel >= 0:2.1.3
 Requires:	gnome-panel >= 2.2.2.2
 Requires:	librsvg2 >= 2.2.0
+Requires:	gtk-engines >= 2.6.0
 Obsoletes:	Nuvola
 
 %description
-Additional themes collection for GNOME
+Additional SVG themes collection for GNOME
 
 %prep
 %setup
@@ -35,13 +36,15 @@ rm -rf ${RPM_BUILD_ROOT}
 
 %files
 %defattr(-, root, root)
-%{_libdir}/gtk-2.0/@GTK_BINARY_VERSION@/engines/*.so*
 %{_datadir}/icons/*
 %{_datadir}/themes/*
 %{_datadir}/locale/*
 %doc AUTHORS MAINTAINERS ChangeLog COPYING README license_dsg license_lgpl license_gpl TODO
 
 %changelog
+* Fri Feb 11 2005 Christian Schaller <uraeus@gnome.org>
+- Update for dependency on new gtk-engines
+
 * Sat Jun 05 2004 Christian Schaller <uraeus@gnome.org>
 - Re-add translations
 
